<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/pink">


    <TextView
        android:id="@+id/text_poids"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_marginTop="110dp"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/poids"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:paddingTop="15dp"
        android:hint="@string/your_weight"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="numberDecimal"
        android:textColorHighlight="@color/black"/>

    <TextView
        android:id="@+id/text_taille"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:layout_marginTop="25dp"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/taille"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:paddingTop="15dp"
        android:hint="@string/your_size"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"/>

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meters"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeters"
            android:textColor="@color/black"/>

    </RadioGroup>

    <CheckBox
        android:id="@+id/mega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mega_function"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/calculImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcul_imc"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/raz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RAZ"
        android:textColor="@color/black"/>

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/click_message"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/click_message"
        android:textSize="15sp"
        android:textColor="@color/black"/>

</LinearLayout>